--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <title>Gary W. Hunter Looney</title>
+    <title>Gary W. Hunter Looney :: index</title>
     <meta charset="utf-8" />
 </head>
 <body>
