--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 <!doctype html>
 <html>
 <head>
-    <title>Gary W. Hunter Looney :: index</title>
+    <title>Gary W. Hunter Looney :: index :: Project 1 :: Term 1304</title>
     <meta charset="utf-8" />
+    <meta name="keywords" content="HTML, Add, Character">
+    <meta name="description" content="Add a Character to a Game.">
+	<meta name="robots" content="noindex">
+	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 </head>
 <body>
 <header>
@@ -10,7 +14,10 @@
 </header>
 <article>
 <p>This app will add your character to a game.</p>
-<a href="additem.html">Add a character!</a>
+
+<a href="additem.html">
+<button>Add a character!</button></a>
+
 <p>04-11-13, Gary W. Hunter Looney</p>
 </article>
 </body>
